# mnist-digital-recogniser

./: README.md
app/: Dockerfile  README.txt  main.py  model.keras  pyproject.toml
parte0/: README.md  pyproject.toml  train.py
