[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = "3.12.10"
dependencies = [
    "streamlit (>=1.58.0,<2.0.0)",
    "tensorflow (>=2.21.0,<3.0.0)",
    "keras (>=3.14.1,<4.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "streamlit-drawable-canvas (>=0.9.3,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
